--- a/rlandboot3/src/main/resources/templates/inc/header.html
+++ b/rlandboot3/src/main/resources/templates/inc/header.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity"
+>
 	<header class="header">
         <div>
             <h1 class="header-title"><a href="/index"><img class="logo" src="/image/logo-w.png" alt="알랜드"></a></h1>
@@ -7,8 +9,13 @@
             <ul class="main-menu d-none d-inline-flex-sm">
 				<li><a class="" href="/menu/list">카페메뉴</a></li>
                 <li><a class="" href="/notice/list">공지사항</a></li>
-                <li><a class="" href="/user/login" th:if="${session.username}==null" >로그인</a></li>
-                <li><a class="" href="/user/logout" th:if="${session.username}" >로그아웃</a></li>
+<!--                <li><a class="" href="/user/login" th:if="${session.username}==null" >로그인</a></li>-->
+<!--                <li><a class="" href="/user/logout" th:if="${session.username}" >로그아웃</a></li>-->
+
+				<li><a class="" href="/user/login" sec:authorize="isAnonymous()" >로그인</a></li>
+                <li><a class="" href="/user/logoutt" sec:authorize="isAuthenticated()" >로그아웃</a></li>
+                
+                
             </ul>
 			<div class="d-none-sm"><a class="icon icon-menu icon-white" href="?m=on">메뉴버튼</a></div>
         </div>
