--- a/rlandboot3/src/main/resources/templates/user/login.html
+++ b/rlandboot3/src/main/resources/templates/user/login.html
@@ -48,7 +48,7 @@
                 th:class="${param.error}? '' : 'd-none'" >
 					아이디 또는 비밀번호가 일치하지 않습니다.
 					 </div>
-                <form method="post">
+                <form method="post" action="/user/loginsdfsdf">
                     <div class="d-flex align-items-center">
                         <label class="d-none">아이디</label><input name="uid"  class="btn btn-cancel" type="text" placeholder="로그인 아이디를 입력하세요">
                     </div>
